antlr/VBasicParser.py
# Generated from VBasic.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VBasicParser ( Parser ):

    grammarFileName = "VBasic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'$'", "'%'", "'RETURN'", "'PRINT'", "'GOTO'", 
                     "'GOSUB'", "'IF'", "'NEXT'", "'THEN'", "'REM'", "'CHR$'", 
                     "'MID$'", "'LEFT$'", "'RIGHT$'", "'STR$'", "'('", "')'", 
                     "'+'", "'-'", "'*'", "'/'", "'CLEAR'", "'>: '", "'<: '", 
                     "'>'", "'<'", "','", "'LIST'", "'NEW'", "'RUN'", "'END'", 
                     "'LET'", "'='", "'FOR'", "'TO'", "'STEP'", "'INPUT'", 
                     "';'", "'DIM'", "'SQR'", "':'", "'TEXT'", "'HGR'", 
                     "'HGR2'", "'LEN'", "'CALL'", "'ASC'", "'HPLOT'", "'VPLOT'", 
                     "'PR#'", "'IN#'", "'VTAB'", "'HTAB'", "'HOME'", "'ON'", 
                     "'PDL'", "'PLOT'", "'PEEK'", "'POKE'", "'INT'", "'STOP'", 
                     "'HIMEM'", "'LOMEM'", "'FLASH'", "'INVERSE'", "'NORMAL'", 
                     "'ONERR'", "'SPC'", "'FRE'", "'POS'", "'USR'", "'TRACE'", 
                     "'NOTRACE'", "'AND'", "'OR'", "'DATA'", "'WAIT'", "'READ'", 
                     "'XDRAW'", "'DRAW'", "'AT'", "'DEF'", "'FN'", "'VAL'", 
                     "'TAB'", "'SPEED'", "'ROT'", "'SCALE'", "'COLOR'", 
                     "'HCOLOR'", "'HLIN'", "'VLIN'", "'SCRN'", "'POP'", 
                     "'SHLOAD'", "'SIN'", "'COS'", "'TAN'", "'ATN'", "'RND'", 
                     "'SGN'", "'EXP'", "'LOG'", "'ABS'", "'STORE'", "'RECALL'", 
                     "'GET'", "'^'", "'&'", "'GR'", "'NOT'", "'RESTORE'", 
                     "'SAVE'", "'LOAD'", "'?'", "'INCLUDE'", "'CLS'" ]

    symbolicNames = [ "<INVALID>", "DOLLAR", "PERCENT", "RETURN", "PRINT", 
                      "GOTO", "GOSUB", "IF", "NEXT", "THEN", "REM", "CHR", 
                      "MID", "LEFT", "RIGHT", "STR", "LPAREN", "RPAREN", 
                      "PLUS", "MINUS", "TIMES", "DIV", "CLEAR", "GTE", "LTE", 
                      "GT", "LT", "COMMA", "LIST", "NEW", "RUN", "END", 
                      "LET", "EQ", "FOR", "TO", "STEP", "INPUT", "SEMICOLON", 
                      "DIM", "SQR", "COLON", "TEXT", "HGR", "HGR2", "LEN", 
                      "CALL", "ASC", "HPLOT", "VPLOT", "PRNUMBER", "INNUMBER", 
                      "VTAB", "HTAB", "HOME", "ON", "PDL", "PLOT", "PEEK", 
                      "POKE", "INTF", "STOP", "HIMEM", "LOMEM", "FLASH", 
                      "INVERSE", "NORMAL", "ONERR", "SPC", "FRE", "POS", 
                      "USR", "TRACE", "NOTRACE", "AND", "OR", "DATA", "WAIT", 
                      "READ", "XDRAW", "DRAW", "AT", "DEF", "FN", "VAL", 
                      "TAB", "SPEED", "ROT", "SCALE", "COLOR", "HCOLOR", 
                      "HLIN", "VLIN", "SCRN", "POP", "SHLOAD", "SIN", "COS", 
                      "TAN", "ATN", "RND", "SGN", "EXP", "LOG", "ABS", "STORE", 
                      "RECALL", "GET", "EXPONENT", "AMPERSAND", "GR", "NOT", 
                      "RESTORE", "SAVE", "LOAD", "QUESTION", "INCLUDE", 
                      "CLS", "COMMENT", "STRINGLITERAL", "LETTERS", "NUMBER", 
                      "FLOAT", "WS" ]

    RULE_prog = 0
    RULE_line = 1
    RULE_typedline = 2
    RULE_linecontent = 3
    RULE_amperoper = 4
    RULE_linenumber = 5
    RULE_amprstmt = 6
    RULE_statement = 7
    RULE_vardecl = 8
    RULE_printstmt1 = 9
    RULE_printlist = 10
    RULE_getstmt = 11
    RULE_letstmt = 12
    RULE_variableassignment = 13
    RULE_relop = 14
    RULE_neq = 15
    RULE_ifstmt = 16
    RULE_forstmt1 = 17
    RULE_forstmt2 = 18
    RULE_nextstmt = 19
    RULE_inputstmt = 20
    RULE_readstmt = 21
    RULE_dimstmt = 22
    RULE_gotostmt = 23
    RULE_gosubstmt = 24
    RULE_pokestmt = 25
    RULE_callstmt = 26
    RULE_hplotstmt = 27
    RULE_vplotstmt = 28
    RULE_plotstmt = 29
    RULE_ongotostmt = 30
    RULE_ongosubstmt = 31
    RULE_vtabstmnt = 32
    RULE_htabstmnt = 33
    RULE_himemstmt = 34
    RULE_lomemstmt = 35
    RULE_datastmt = 36
    RULE_datum = 37
    RULE_waitstmt = 38
    RULE_xdrawstmt = 39
    RULE_drawstmt = 40
    RULE_defstmt = 41
    RULE_tabstmt = 42
    RULE_speedstmt = 43
    RULE_rotstmt = 44
    RULE_scalestmt = 45
    RULE_colorstmt = 46
    RULE_hcolorstmt = 47
    RULE_hlinstmt = 48
    RULE_vlinstmt = 49
    RULE_onerrstmt = 50
    RULE_prstmt = 51
    RULE_instmt = 52
    RULE_storestmt = 53
    RULE_recallstmt = 54
    RULE_liststmt = 55
    RULE_popstmt = 56
    RULE_amptstmt = 57
    RULE_includestmt = 58
    RULE_endstmt = 59
    RULE_returnstmt = 60
    RULE_restorestmt = 61
    RULE_number = 62
    RULE_func_ = 63
    RULE_signExpression = 64
    RULE_exponentExpression = 65
    RULE_multiplyingExpression = 66
    RULE_addingExpression = 67
    RULE_relationalExpression = 68
    RULE_expression = 69
    RULE_var_ = 70
    RULE_varname = 71
    RULE_varsuffix = 72
    RULE_varlist = 73
    RULE_exprlist = 74
    RULE_sqrfunc = 75
    RULE_chrfunc = 76
    RULE_lenfunc = 77
    RULE_ascfunc = 78
    RULE_midfunc = 79
    RULE_pdlfunc = 80
    RULE_peekfunc = 81
    RULE_intfunc = 82
    RULE_spcfunc = 83
    RULE_frefunc = 84
    RULE_posfunc = 85
    RULE_usrfunc = 86
    RULE_leftfunc = 87
    RULE_rightfunc = 88
    RULE_strfunc = 89
    RULE_fnfunc = 90
    RULE_valfunc = 91
    RULE_scrnfunc = 92
    RULE_sinfunc = 93
    RULE_cosfunc = 94
    RULE_tanfunc = 95
    RULE_atnfunc = 96
    RULE_rndfunc = 97
    RULE_sgnfunc = 98
    RULE_expfunc = 99
    RULE_logfunc = 100
    RULE_absfunc = 101
    RULE_tabfunc = 102

    ruleNames =  [ "prog", "line", "typedline", "linecontent", "amperoper", 
                   "linenumber", "amprstmt", "statement", "vardecl", "printstmt1", 
                   "printlist", "getstmt", "letstmt", "variableassignment", 
                   "relop", "neq", "ifstmt", "forstmt1", "forstmt2", "nextstmt", 
                   "inputstmt", "readstmt", "dimstmt", "gotostmt", "gosubstmt", 
                   "pokestmt", "callstmt", "hplotstmt", "vplotstmt", "plotstmt", 
                   "ongotostmt", "ongosubstmt", "vtabstmnt", "htabstmnt", 
                   "himemstmt", "lomemstmt", "datastmt", "datum", "waitstmt", 
                   "xdrawstmt", "drawstmt", "defstmt", "tabstmt", "speedstmt", 
                   "rotstmt", "scalestmt", "colorstmt", "hcolorstmt", "hlinstmt", 
                   "vlinstmt", "onerrstmt", "prstmt", "instmt", "storestmt", 
                   "recallstmt", "liststmt", "popstmt", "amptstmt", "includestmt", 
                   "endstmt", "returnstmt", "restorestmt", "number", "func_", 
                   "signExpression", "exponentExpression", "multiplyingExpression", 
                   "addingExpression", "relationalExpression", "expression", 
                   "var_", "varname", "varsuffix", "varlist", "exprlist", 
                   "sqrfunc", "chrfunc", "lenfunc", "ascfunc", "midfunc", 
                   "pdlfunc", "peekfunc", "intfunc", "spcfunc", "frefunc", 
                   "posfunc", "usrfunc", "leftfunc", "rightfunc", "strfunc", 
                   "fnfunc", "valfunc", "scrnfunc", "sinfunc", "cosfunc", 
                   "tanfunc", "atnfunc", "rndfunc", "sgnfunc", "expfunc", 
                   "logfunc", "absfunc", "tabfunc" ]

    EOF = Token.EOF
    DOLLAR=1
    PERCENT=2
    RETURN=3
    PRINT=4
    GOTO=5
    GOSUB=6
    IF=7
    NEXT=8
    THEN=9
    REM=10
    CHR=11
    MID=12
    LEFT=13
    RIGHT=14
    STR=15
    LPAREN=16
    RPAREN=17
    PLUS=18
    MINUS=19
    TIMES=20
    DIV=21
    CLEAR=22
    GTE=23
    LTE=24
    GT=25
    LT=26
    COMMA=27
    LIST=28
    NEW=29
    RUN=30
    END=31
    LET=32
    EQ=33
    FOR=34
    TO=35
    STEP=36
    INPUT=37
    SEMICOLON=38
    DIM=39
    SQR=40
    COLON=41
    TEXT=42
    HGR=43
    HGR2=44
    LEN=45
    CALL=46
    ASC=47
    HPLOT=48
    VPLOT=49
    PRNUMBER=50
    INNUMBER=51
    VTAB=52
    HTAB=53
    HOME=54
    ON=55
    PDL=56
    PLOT=57
    PEEK=58
    POKE=59
    INTF=60
    STOP=61
    HIMEM=62
    LOMEM=63
    FLASH=64
    INVERSE=65
    NORMAL=66
    ONERR=67
    SPC=68
    FRE=69
    POS=70
    USR=71
    TRACE=72
    NOTRACE=73
    AND=74
    OR=75
    DATA=76
    WAIT=77
    READ=78
    XDRAW=79
    DRAW=80
    AT=81
    DEF=82
    FN=83
    VAL=84
    TAB=85
    SPEED=86
    ROT=87
    SCALE=88
    COLOR=89
    HCOLOR=90
    HLIN=91
    VLIN=92
    SCRN=93
    POP=94
    SHLOAD=95
    SIN=96
    COS=97
    TAN=98
    ATN=99
    RND=100
    SGN=101
    EXP=102
    LOG=103
    ABS=104
    STORE=105
    RECALL=106
    GET=107
    EXPONENT=108
    AMPERSAND=109
    GR=110
    NOT=111
    RESTORE=112
    SAVE=113
    LOAD=114
    QUESTION=115
    INCLUDE=116
    CLS=117
    COMMENT=118
    STRINGLITERAL=119
    LETTERS=120
    NUMBER=121
    FLOAT=122
    WS=123

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VBasicParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VBasicParser.LineContext)
            else:
                return self.getTypedRuleContext(VBasicParser.LineContext,i)


        def getRuleIndex(self):
            return VBasicParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = VBasicParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 206
                self.line()
                self.state = 209 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==121):
                    break

            self.state = 211
            self.match(VBasicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linenumber(self):
            return self.getTypedRuleContext(VBasicParser.LinenumberContext,0)


        def linecontent(self):
            return self.getTypedRuleContext(VBasicParser.LinecontentContext,0)


        def getRuleIndex(self):
            return VBasicParser.RULE_line

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = VBasicParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 213
            self.linenumber()
            self.state = 214
            self.linecontent()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linecontent(self):
            return self.getTypedRuleContext(VBasicParser.LinecontentContext,0)


        def linenumber(self):
            return self.getTypedRuleContext(VBasicParser.LinenumberContext,0)


        def getRuleIndex(self):
            return VBasicParser.RULE_typedline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedline" ):
                return visitor.visitTypedline(self)
            else:
                return visitor.visitChildren(self)




    def typedline(self):

        localctx = VBasicParser.TypedlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typedline)
        self._la = 0 # Token type
        try:
            self.state = 221
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 217
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==121:
                    self.state = 216
                    self.linenumber()


                self.state = 219
                self.linecontent()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 220
                self.linenumber()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinecontentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def amprstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VBasicParser.AmprstmtContext)
            else:
                return self.getTypedRuleContext(VBasicParser.AmprstmtContext,i)


        def COMMENT(self):
            return self.getToken(VBasicParser.COMMENT, 0)

        def REM(self):
            return self.getToken(VBasicParser.REM, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(VBasicParser.COLON)
            else:
                return self.getToken(VBasicParser.COLON, i)

        def getRuleIndex(self):
            return VBasicParser.RULE_linecontent

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLinecontent" ):
                return visitor.visitLinecontent(self)
            else:
                return visitor.visitChildren(self)




    def linecontent(self):

        localctx = VBasicParser.LinecontentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_linecontent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 235
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 223
                self.amprstmt()
                self.state = 230
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==41:
                    self.state = 224
                    self.match(VBasicParser.COLON)
                    self.state = 226
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & -1513389082003110408) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 107925866115625743) != 0):
                        self.state = 225
                        self.amprstmt()


                    self.state = 232
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.state = 233
                self.match(VBasicParser.COMMENT)
                pass

            elif la_ == 3:
                self.state = 234
                self.match(VBasicParser.REM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AmperoperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMPERSAND(self):
            return self.getToken(VBasicParser.AMPERSAND, 0)
